--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-$primary : rgb(1,1,1);
+$bg : rgb(222, 234, 243);
 
 body {
     margin: 0 !important;
-    background-color: $primary;
+    background-color: $bg;
     
 }
 
